B&L QA/objects/Customer_Relationships__c.object
<CustomObject>
    <description>wholesaler/ship to relationship --- EMEA</description>
    <fields>
        <fullName>Non_Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account</description>
        <label>Non-Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Relationships (as Non-Primary)</relationshipLabel>
        <relationshipName>Wholesaler_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Primary_Bill_To_ID__c</fullName>
        <formula>Non_Primary_Account__r.Bill_To_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Primary Bill To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Primary_Bill_To__c</fullName>
        <formula>HYPERLINK ( &quot;/&quot; &amp; Non_Primary_Account__r.Bill_To_Account__c , Non_Primary_Account__r.Bill_To_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Primary Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Primary_Ship_To_ID__c</fullName>
        <formula>Non_Primary_Account__r.Ship_To_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Pirmary Ship To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wholesaler Account</description>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Relationships (as Primary)</relationshipLabel>
        <relationshipName>Wholesaler_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Bill_To_ID__c</fullName>
        <formula>Primary_Account__r.Bill_To_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Bill To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Bill_To__c</fullName>
        <formula>HYPERLINK ( &quot;/&quot; &amp; Primary_Account__r.Bill_To_Account__c , Primary_Account__r.Bill_To_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Bill To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Ship_To_ID__c</fullName>
        <formula>Primary_Account__r.Ship_To_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Ship To ID</label>
        <type>Text</type>
    </fields>
    <label>Customer Relationship</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Customer Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>